# mathprim

./: .clang-format  .clang-tidy  .clangd  .continueignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  pyproject.toml  setup-for-dev.sh  sinsin.npy
bindings/: CMakeLists.txt  README.md
bindings/src/: checkings.cpp  cholesky.cpp  common.hpp  geometry.cpp  linalg.cpp  linalg.cu  linalg.hpp  main.cpp
bindings/tests/: test_geom.py  test_geom_laplacian.py  test_linalg.py  test_linalg_cuda_direct.py  test_linalg_direct.py
mathprim/: CMakeLists.txt
mathprim/include/mathprim/blas/: blas.hpp  cpu_blas.hpp  cpu_eigen.hpp  cpu_handmade.hpp  cublas.cuh
mathprim/include/mathprim/core/: blas.hpp  buffer.hpp  buffer_view.hpp  common.hpp  core.hpp  core_cuda.cuh  defines.hpp  dim.hpp  func.hpp  functional.hpp  linalg.hpp  parallel.hpp  vec.hpp  view.hpp
mathprim/include/mathprim/core/backends/: cpu.hpp  cuda.cuh
mathprim/include/mathprim/core/blas/: cpu_blas.hpp  cpu_eigen.hpp  cpu_handmade.hpp  cublas.cuh  utils.hpp
mathprim/include/mathprim/core/devices/: cuda.cuh
mathprim/include/mathprim/core/parallel/: cuda.cuh  openmp.hpp  sequential.hpp  std.hpp
mathprim/include/mathprim/core/utils/: common.hpp  cuda_utils.cuh  index_pack.hpp  parameter_item.hpp  singleton.hpp  timed.hpp
mathprim/include/mathprim/core/view_from/: stl_vector.hpp
mathprim/include/mathprim/dnn/: basic_module.hpp  status.md
mathprim/include/mathprim/dnn/nn/: activation.hpp  fixed_sparse_linear.hpp  global_sparse.hpp  linear.hpp  positional_encoding.hpp  reshape.hpp  sequential.hpp
mathprim/include/mathprim/dynamic/: buffer.hpp
mathprim/include/mathprim/geometry/: basic_mesh.hpp  laplacian.hpp  lumped_mass.hpp
mathprim/include/mathprim/linalg/: basic_sparse_solver.hpp  det.hpp  eig.hpp  inv.hpp  linalg.hpp  svd.hpp
mathprim/include/mathprim/linalg/direct/: cholmod.hpp  direct.hpp  eigen_support.hpp
mathprim/include/mathprim/linalg/internal/: svd3.h
mathprim/include/mathprim/linalg/iterative/: cg.hpp  iterative.hpp
mathprim/include/mathprim/linalg/iterative/internal/: diagonal_extract.hpp
mathprim/include/mathprim/linalg/iterative/precond/: ainv.hpp  approx_inv.hpp  diagonal.hpp  eigen_support.hpp  fsai0.hpp  ic.hpp  ic_cusparse.hpp  ic_cusparse_ext.hpp  ilu.hpp  ilu_cusparse.hpp  ilu_superlu.hpp  low_rank_approximation.hpp  sparse_inverse.hpp
mathprim/include/mathprim/linalg/iterative/smoother/: fixed_iteration.hpp  jacobi.hpp  (+2 more)
mathprim/include/mathprim/optim/: basic_optim.hpp
mathprim/include/mathprim/optim/ex_probs/: banana.hpp  quad.hpp
mathprim/include/mathprim/optim/linesearcher/: backtracking.hpp
mathprim/include/mathprim/optim/optimizer/: adamw.hpp  gradient.hpp  gradient_descent.hpp  l_bfgs.hpp  ncg.hpp  newton.hpp
mathprim/include/mathprim/parallel/: cuda.cuh  openmp.hpp  parallel.hpp  sequential.hpp  stl.hpp
mathprim/include/mathprim/sparse/: basic_sparse.hpp  cvt.hpp  gather.hpp  sparse_gather.hpp
mathprim/include/mathprim/sparse/blas/: cholmod.hpp  csr.hpp  cusparse.hpp  eigen.hpp  mkl.hpp  naive.hpp
mathprim/include/mathprim/sparse/formats/: csr.hpp
mathprim/include/mathprim/sparse/systems/: laplace.hpp
mathprim/include/mathprim/supports/: eigen_dense.hpp  eigen_sparse.hpp  nanobind.hpp  stringify.hpp
mathprim/include/mathprim/supports/bindings/: nb_ext.hpp
mathprim/include/mathprim/supports/io/: matrix_market.hpp  npy.hpp
mathprim/include/mathprim/supports/view_from/: stl.hpp  thrust.cuh
mathprim/nb/: CMakeLists.txt
mathprim/nb/bindings/: bind_cuda.cu  bind_cuda.cuh  ext.cpp  nb_ext.hpp
src/: CMakeLists.txt
src/include/mathprim/core/: blas.hpp  buffer.hpp  buffer_view.hpp  common.hpp  core.hpp  cuda_utils.cuh  defines.hpp  dim.hpp  parallel.hpp  vec.hpp  vmap.hpp
src/include/mathprim/core/backends/: cpu.hpp  cuda.cuh
src/include/mathprim/core/blas/: basic_blas.hpp  cpu_blas.hpp  cpu_eigen.hpp  cpu_handmade.hpp  cublas.cuh  helper_macros.hpp
src/include/mathprim/core/buffers/: basic_buffer.hpp  cpu_buffer.hpp  cuda_buffer.cuh
src/include/mathprim/core/highorder/: vmap.hpp
src/include/mathprim/core/itertools/: foreach.hpp  ndrange.hpp
src/include/mathprim/core/parallel/: cuda.cuh  openmp.hpp  sequential.hpp  std.hpp
src/include/mathprim/core/utils/: call_once.hpp  cuda_utils.cuh  god.hpp
src/include/mathprim/sparse/: basic_sparse.hpp
src/include/mathprim/supports/: eigen_dense.hpp  npyio.hpp  stringify.hpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  README.md  blas.cpp  blas.cu  csr_cg.cpp  csr_cg.cu  csr_fp.cu  cu_csr.py  main.cpp  map.cpp  par.cpp  par.cu  sparse_csr.cpp  sparse_csr.cu  spmv.py
tests/cg_solver/: CMakeLists.txt  main.cpp
tests/cholmod/: CMakeLists.txt  main.cpp
tests/cpu_blas/: CMakeLists.txt  main.cpp
tests/cublas/: CMakeLists.txt  main.cu
tests/cuda_training_series/: CMakeLists.txt  README.md  cts_helper.cuh
tests/cuda_training_series/hw01/: 01.cu  02.cu  03.cu  CMakeLists.txt  readme.md
tests/cuda_training_series/hw02/: 01.cu  02.cu  CMakeLists.txt
tests/cuda_training_series/hw03/: 01.cu  CMakeLists.txt
tests/cuda_training_series/hw04/: 01.cu  CMakeLists.txt
tests/cuda_training_series/hw05/: 01.cu  CMakeLists.txt
tests/dim_iterator/: CMakeLists.txt  main.cpp
tests/eigen/: CMakeLists.txt  main.cpp
tests/eigen_cuda/: CMakeLists.txt  main.cu
tests/extreme_test/: CMakeLists.txt  main.cu
tests/finite_element_matrix/: CMakeLists.txt  main.cpp
tests/geometry/: CMakeLists.txt  geometry_test.cpp
tests/hello_world/: CMakeLists.txt  main.cpp
tests/hello_world_cuda/: CMakeLists.txt  main.cu
tests/nn/: CMakeLists.txt  inr.cpp  inr.cu  inr.py  inr_jax.py  inr_vis.py  linear.cpp  pca.cpp  sparse.cpp
tests/npyio/: CMakeLists.txt  main.cpp
tests/nystorm/: CMakeLists.txt  main.cpp  main.cu
tests/omp/: CMakeLists.txt  main.cpp
tests/optim/: CMakeLists.txt  banana.cpp  optim.cpp  quad.cpp  quad.cu
tests/sparse/: CMakeLists.txt  main.cu
tests/sparse_ainv_sparse/: CMakeLists.txt  main.cpp
tests/sparse_csr/: CMakeLists.txt  main.cpp
(+10 files in other folders)
