macro(mathprim_add_benchmark name)
  add_executable(BM_${name} ${name}.cpp)
  target_link_libraries(BM_${name} PRIVATE benchmark::benchmark mathprim)
  target_compile_options(BM_${name} PRIVATE -march=native)
endmacro(mathprim_add_benchmark)

macro(mathprim_add_benchmark_cu name)
  add_executable(BM_cu_${name} ${name}.cu)
  target_link_libraries(BM_cu_${name} PRIVATE benchmark::benchmark mathprim)
  target_compile_options(BM_cu_${name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcompiler=-march=native>)
endmacro()

macro(mathprim_add_example EXAMPLE_NAME SOURCE_FILES)
  add_executable(${EXAMPLE_NAME} ${SOURCE_FILES})
  target_link_libraries(${EXAMPLE_NAME} PRIVATE mathprim)
  target_compile_options(${EXAMPLE_NAME} PRIVATE -march=native)
endmacro(mathprim_add_example)

macro(mathprim_add_testing EXAMPLE_NAME SOURCE_FILES)
  add_executable(${EXAMPLE_NAME} ${SOURCE_FILES})
  target_link_libraries(${EXAMPLE_NAME} PRIVATE mathprim GTest::GTest GTest::Main)
  target_compile_options(${EXAMPLE_NAME} PRIVATE -march=native)
  add_test(NAME ${EXAMPLE_NAME} COMMAND ${EXAMPLE_NAME})
endmacro(mathprim_add_testing)

find_package(benchmark REQUIRED)
find_package(GTest REQUIRED)
enable_testing()


add_subdirectory(benchmark)
add_subdirectory(cg_solver)
add_subdirectory(cholmod)
add_subdirectory(cpu_blas)
add_subdirectory(dim_iterator)
add_subdirectory(eigen)
add_subdirectory(geometry)
add_subdirectory(hello_world)
add_subdirectory(nn)
add_subdirectory(npyio)
add_subdirectory(nystorm)
add_subdirectory(omp)
add_subdirectory(optim)
add_subdirectory(sparse_csr)
add_subdirectory(sparse_ainv_sparse)
if(MATHPRIM_BUILD_TESTS_CUDA)
  add_subdirectory(hello_world_cuda)
  add_subdirectory(cublas)
  add_subdirectory(extreme_test)
  add_subdirectory(sparse)
  add_subdirectory(cuda_training_series)

  add_subdirectory(eigen_cuda)
endif()