find_package(Python COMPONENTS Interpreter Development REQUIRED)
file(GLOB_RECURSE MATHPRIM_BINDINGS_CPP bindings/**.cpp)
file(GLOB_RECURSE MATHPRIM_BINDINGS_CU  bindings/**.cu)
if(MATHPRIM_ENABLE_CUDA)
  nanobind_add_module(pymathprim ${MATHPRIM_BINDINGS_CPP} ${MATHPRIM_BINDINGS_CU})
else()
  nanobind_add_module(pymathprim ${MATHPRIM_BINDINGS_CPP})
endif()
target_link_libraries(pymathprim PRIVATE mathprim)